Fixes, added sample programs, v1 done - Fixed double scrollbar on editor - Modified TM tape to only show one end empty token - Added copyPaste, reverse, arithMultipliation and binaryAddition sample TM programs - Added binaryAddition sample program  as default on open

--- a/src/Css/Editor.css
+++ b/src/Css/Editor.css
@@ -1,6 +1,5 @@
 .CodeMirror {
     height: calc(100vh - 145px);
-    overflow-y: scroll;
 }
 
 .Editor {
